fixed overflow issues on small screens

--- a/static/styles/layout.css
+++ b/static/styles/layout.css
@@ -45,6 +45,7 @@ footer {
   display: flex;
   justify-content: space-between;
   align-items: flex-end;
+  flex-wrap: wrap;
 
   padding: 1.5rem;
 
